# CMakeList-window-ford

./: CMakeLists.txt  HMIControls.lib  HMIThemeBundle.lib  README.md  main.cpp  main.qml  qml.qrc  startqnx700.sh  themeloader.cpp
qmlf/: ArrowCanvas.qml  ButtonGallery.qml  CheckboxGallery.qml  CoverFlow.qml  CustomAnimation.qml  Gallery.qml  GalleryExhibit.qml  GallerySelector.qml  GridViewGallery.qml  HomeForm.qml  LayoutGallery.qml  LayoutJsonExprtkParserGallery.qml  ListViewGallery.qml  MediaQueryLayouts.qml  MessageLabel.qml  MiscGallery.qml  MyDelegate.qml  PhotoFlow.qml  QWaitTooltip.qml  RGBSlider.qml  RGBSliderStyle.qml  RadioButtonGallery.qml  RecentScreenFHC.qml  RecentScreenQuickControl.qml  ScrollingGallery.qml  ShaderGallery.qml  SlidersGallery.qml  StatusBar.qml  TextGallery.qml  ToggleSwitchGallery.qml  main.qml
qmlf/8inch/Ford-MY20-nav/: assets.json  layouts.json
qmlf/FordControls/: DemoTest.qml  FordGridPushTextButtonListView.qml  FordIconTextPushButton.qml  FordListPushTextButtonListView.qml  MyOptionsView.qml  OptionsGridView.qml  OptionsItemDelegate.qml  PaginatedGridView.qml  QtGridPushButtonModule.qml  StylableView.qml
qmlf/FordControls/gridlistview/: FordGridViewGallery.qml  FordListViewGallery.qml  qmlgrid.qrc
qmlf/FordControls/poiRoutes/: AlternativeRouteItem.qml  AlternativeRoutesList.qml  AlternativeRoutesTopBar.qml  ArpEteFormatter.qml  AvoidOnRouteList.qml  Bubble.qml  CheckBoxButtonWithHDivider.qml  EteDisplayer.qml  GoButton.qml  HalfPanelTitleBar12Inch.qml  NoGpsIcon.qml  PoiRoutes.qml  RouteBubble.qml  RouteBubbleGroup.qml  ScaleBar.qml  StartButton.qml  TitleBar.qml
qmlf/MessageLabel/: MessageLabel.qml
qmlf/QtControls/: MapManuButton.qml  MapManuButton.qml - Shortcut.lnk  QtGridPushButtonModule.qml  QtGridtPushTextButtonListView.qml  QtIconTextPushButton.qml  QtListPushTextButtonListView .qml  QtListPushTextButtonListView.qml
qmlf/QtControls/qtPoiRoutes/: AlternativeRoutesTopBar.qml  GoButton.qml  QtAlternativeRoutesList.qml  QtPoiRoutes.qml  TitleBar.qml
qmlf/inch/Ford-MY20-nav/: palette.json  style.json
qmlf/tableModuleView/: TableShowWidget.qml  TableViewItem.qml
src/utiltool/: CFilterWordsLog.cpp  CFilterWordsLog.h
